tests/miniJava/neg/005291_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public while int [] java ( ) { return 0 ; } }
